<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:gravity="center"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgRecipe"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/dalgona_coffee" />

    <Button
        android:id="@+id/btnRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRecipe"
        android:textSize="26sp" />

</LinearLayout>